k8s/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: ecommerce
spec:
  replicas: 1   # RWO volume limitation
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: sohail28/django-ecommerce:k8s-v10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
          command:
            - sh
            - -c
            - |
               python manage.py migrate &&
               python manage.py collectstatic --noinput &&
               gunicorn config.wsgi:application --bind 0.0.0.0:8000
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media-volume
              mountPath: /app/media
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: django-media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: ecommerce
spec:
  selector:
    app: django
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
